--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
