--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    env_file:
+      - .env
     volumes:
       - '.:/app'
       - '/app/node_modules'
     ports:
-      - '3000:80'
+      - '8081:80'
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=production
