--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.30.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
@@ -18,10 +19,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "test": "react-dotenv && react-scripts test",
+    "eject": "react-dotenv &&react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
