--- a/.github/workflows/auto-deploy-develop.yml
+++ b/.github/workflows/auto-deploy-develop.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Stop container
         continue-on-error: true
         run: docker-compose down
-      - name: Create .env.docker file
+      - name: Create .env file
         run: |
           touch .env
           echo END_POINT=${{secrets.END_POINT}} > .env
