Fix file docker-compose

--- a/.github/workflows/auto-deploy-develop.yml
+++ b/.github/workflows/auto-deploy-develop.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          echo END_POINT=${{secrets.END_POINT}} > .env
+          echo REACT_APP_END_POINT=${{secrets.REACT_APP_END_POINT}} > .env
       - name: Build image
         run: docker-compose build
       - name: Start container
