--- a/.github/workflows/auto-deploy-develop.yml
+++ b/.github/workflows/auto-deploy-develop.yml
@@ -15,7 +15,7 @@ jobs:
         run: |
           touch .env
           echo REACT_APP_END_POINT=${{secrets.REACT_APP_END_POINT}} > .env
-          echo REACT_APP_PAYPAL_CLIENT_ID=${{secrets.REACT_APP_PAYPAL_CLIENT_ID}} > .env
+          echo REACT_APP_PAYPAL_CLIENT_ID=${{secrets.REACT_APP_PAYPAL_CLIENT_ID}} >> .env
       - name: Stop container
         continue-on-error: true
         run: docker-compose down
