--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-confirm-box": "^1.2.0",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.30.0",
