--- a/.github/workflows/auto-deploy-develop.yml
+++ b/.github/workflows/auto-deploy-develop.yml
@@ -1,26 +1,47 @@
-name: Auto deploy develop ReactJS
+name: Build, publish a Docker image, after that auto deploy to K8s
 
 on:
   push:
     branches:
-      - develop
+      - staging
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
-    runs-on: self-hosted
+  build-and-push-image:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Create .env file
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Add SHORT_SHA env property with commit short sha
+        run: echo "SHORT_SHA=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_ENV
+      - name: Add IMAGE_VERSION env with branch and short sha
+        run: echo "IMAGE_VERSION=`echo ${{github.ref_name}}-${SHORT_SHA}`" >> $GITHUB_ENV
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Log in to the Container registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
+      - name: Setup K8s
+        uses: tale/kubectl-action@v1
+        with:
+          base64-kube-config: ${{ secrets.KUBE_CONFIG }}
+      - name: Run deploy app
         run: |
-          touch .env
-          echo REACT_APP_END_POINT=${{secrets.REACT_APP_END_POINT}} > .env
-          echo REACT_APP_PAYPAL_CLIENT_ID=${{secrets.REACT_APP_PAYPAL_CLIENT_ID}} >> .env
-          echo REACT_APP_URL=${{secrets.REACT_APP_URL}} >> .env
-      - name: Stop container
-        continue-on-error: true
-        run: docker-compose down
-      - name: Build image
-        run: docker-compose build
-      - name: Start container
-        run: docker-compose up -d
+          chmod +x ./deployments/update_version_and_deploy.sh
+          ./deployments/update_version_and_deploy.sh ${{ env.IMAGE_VERSION }}
