--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
+    "cypress": "^11.2.0",
     "moment": "^2.29.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
