--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:info": "cypress info",
+    "cy:version": "cypress version",
+    "cy:run:record": "cypress run --record",
+    "cy:cache:list": "cypress cache list"
   },
   "eslintConfig": {
     "extends": [
