--- a/.github/workflows/auto-deploy-develop.yml
+++ b/.github/workflows/auto-deploy-develop.yml
@@ -3,7 +3,7 @@ name: Build, publish a Docker image, after that auto deploy to K8s
 on:
   push:
     branches:
-      - staging
+      - main
 
 env:
   REGISTRY: ghcr.io
@@ -34,7 +34,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./docker
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_VERSION }}
       - name: Setup K8s
