--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: vy02-fe-voucher-traveloka
     build:
       context: .
-      dockerfile: docker/Dockerfile
+      dockerfile: Dockerfile
     env_file:
       - .env
     volumes:
