--- a/.github/workflows/auto-test.yaml
+++ b/.github/workflows/auto-test.yaml
@@ -19,4 +19,4 @@ jobs:
         uses: cypress-io/github-action@v4.2.2 # use the explicit version number
         with:
           # Specify Browser since container image is compile with Firefox
-          browser: firefox
+          browser: chrome
