--- a/.github/workflows/auto-test.yaml
+++ b/.github/workflows/auto-test.yaml
@@ -13,10 +13,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Install NPM dependencies, cache them correctly
-      # and run all Cypress tests
       - name: Cypress run
         uses: cypress-io/github-action@v4.2.2 # use the explicit version number
         with:
-          # Specify Browser since container image is compile with Firefox
           browser: chrome
+          record: true
+        env:
+          CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
